--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -76,6 +76,24 @@
             margin: 20px 0;
             border-top: 2px solid #4CAF50;
         }
+h1 {
+    font-size: 2em;
+    color: #333;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+h2 {
+    font-size: 1.5em;
+    color: #555;
+    margin-bottom: 5px;
+}
+
+p {
+    font-size: 1em;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
     </style>
 </head>
 <body>
@@ -114,29 +132,47 @@
         }
 
         // Processa o arquivo .txt e cria os elementos HTML dinamicamente
-        function processTextFile(data) {
-            const lines = data.split('\n');
-            const contentDiv = document.getElementById('content');
+       function processTextFile(data) {
+    const lines = data.split('\n');
+    const contentDiv = document.getElementById('content');
 
-            lines.forEach(line => {
-                const [id, lang, text] = line.split('|');
-                
-                if (id && lang && text) {
-                    if (id === 'spacer') {
-                        const hr = document.createElement('div');
-                        hr.className = 'spacer';
-                        contentDiv.appendChild(hr);
-                    } else {
-                        texts.push({ id, lang, text });
+    lines.forEach(line => {
+        const [type, lang, text] = line.split('|');
 
-                        const p = document.createElement('p');
-                        p.id = id;
-                        p.innerText = text;
-                        contentDiv.appendChild(p);
-                    }
-                }
-            });
+        if (type && lang && text) {
+            let element;
+
+            switch (type) {
+                case 'title':
+                    element = document.createElement('h1');
+                    break;
+                case 'subtitle':
+                    element = document.createElement('h2');
+                    break;
+                case 'text':
+                    element = document.createElement('p');
+                    break;
+                case 'text-bold':
+                    element = document.createElement('p');
+                    element.style.fontWeight = 'bold';
+                    break;
+                case 'spacer':
+                    element = document.createElement('div');
+                    element.className = 'spacer';
+                    break;
+                default:
+                    console.warn(`Tipo desconhecido: ${type}`);
+            }
+
+            if (element) {
+                element.innerText = text;
+                element.lang = lang; // Define o idioma, útil para sintetização
+                contentDiv.appendChild(element);
+            }
         }
+    });
+}
+
 
         function toggleLesson() {
             if (isPlaying) {
