--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -132,7 +132,7 @@
             }
         }
 
-      function processTextFile(data) {
+    function processTextFile(data) {
     const lines = data.split('\n');
     const contentDiv = document.getElementById('content');
 
@@ -151,12 +151,15 @@
                         break;
                     case 'text':
                         element = document.createElement('p');
-                        element.innerHTML = parseText(text); // Adiciona suporte para negrito
                         break;
                     case 'text-bold':
                         element = document.createElement('p');
                         element.style.fontWeight = 'bold';
-                        element.innerHTML = parseText(text); // Adiciona suporte para negrito
+                        break;
+                    case 'text-bold-large':
+                        element = document.createElement('p');
+                        element.style.fontWeight = 'bold';
+                        element.style.fontSize = '1.5em'; // Aumenta a fonte
                         break;
                     case 'spacer':
                         element = document.createElement('div');
@@ -168,9 +171,10 @@
 
                 if (element) {
                     element.id = `text-${texts.length}`;
+                    element.innerText = text.trim();
                     element.lang = lang;
                     contentDiv.appendChild(element);
-                    texts.push({ id: element.id, lang, text: stripAsterisks(text) }); // Remove asteriscos do texto para o sintetizador
+                    texts.push({ id: element.id, lang, text: text.trim() });
                 }
             }
         }
