--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -139,7 +139,7 @@
     lines.forEach(line => {
         if (line.trim()) {
             const [type, lang, text] = line.split('|');
-            if (type && lang && text) {
+            if (type) {
                 let element;
 
                 switch (type) {
@@ -163,18 +163,26 @@
                         break;
                     case 'spacer':
                         element = document.createElement('div');
-                        element.className = 'spacer';
+                        if (text === 'separator') {
+                            element.style.width = '100%';
+                            element.style.height = '5px';
+                            element.style.backgroundColor = '#4CAF50'; // Cor verde
+                            element.style.margin = '20px 0'; // Espaçamento
+                        } else {
+                            element.className = 'spacer';
+                        }
                         break;
                     default:
                         console.warn(`Tipo desconhecido: ${type}`);
                 }
 
                 if (element) {
-                    element.id = `text-${texts.length}`;
-                    element.innerText = text.trim();
-                    element.lang = lang;
+                    if (text && type !== 'spacer') {
+                        element.innerText = text.trim();
+                    }
+                    element.lang = lang || '';
                     contentDiv.appendChild(element);
-                    texts.push({ id: element.id, lang, text: text.trim() });
+                    texts.push({ id: element.id || '', lang, text: text ? text.trim() : '' });
                 }
             }
         }
