--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -132,7 +132,7 @@
             }
         }
 
-  function processTextFile(data) {
+ function processTextFile(data) {
     const lines = data.split('\n');
     const contentDiv = document.getElementById('content');
 
@@ -163,7 +163,8 @@
                         break;
                     case 'spacer':
                         element = document.createElement('div');
-                        if (lang === 'separator') { // Verifica se é o separador
+                        // Identifica separadores específicos
+                        if (lang === 'separator') {
                             element.style.width = '100%';
                             element.style.height = '5px';
                             element.style.backgroundColor = '#4CAF50'; // Cor verde
@@ -177,13 +178,14 @@
                 }
 
                 if (element) {
+                    // Define texto apenas para elementos textuais
                     if (text && type !== 'spacer') {
                         element.innerText = text.trim();
                     }
-                    element.lang = lang || '';
+                    element.lang = lang || ''; // Define o idioma
                     contentDiv.appendChild(element);
 
-                    // Adiciona ao array de textos, excluindo elementos sem texto válido
+                    // Adiciona elementos ao array de textos para o sintetizador
                     if (type !== 'spacer' || lang === 'separator') {
                         texts.push({ id: element.id || '', lang, text: text ? text.trim() : '' });
                     }
